[package]
name = "toshl2influxdb"
version = "0.1.0"
authors = ["imlonghao <git@imlonghao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0"
rand = "0.8.2"
